The contact form is inside a table

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Selamawit E.</title>
+    <link rel="icon "type="image/jpg" href="./asset/image/Tulips.jpg">
 </head>
 <body>
     <!-- This is the first step... -->
     <!-- Naivgation -->
     <hr> 
     <a href="index.html">Home</a>  |
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> |
+    <a href="gallery.html">Gallery</a>
 
 
     <hr>
@@ -83,3 +85,10 @@
 
 </body>
 </html>
+
+
+
+
+
+
+  
