Icon is changed and more input elements are added on the contact form

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <tr>
                     <td><label for="fName">First Name</label>&nbsp;
                         </td>
-                    <td><input type="text" name="fName" id="fName"></td>
+                    <td><input type="text" name="fName" id="fName" required size="20" pattern="[a-z]{4,8}" title="4 to 8 lowercase letters"></td>
                     
                 </tr>
                 <tr>
