Pattern is added to first name, last name and password for validation

--- a/contact.html
+++ b/contact.html
@@ -36,17 +36,29 @@
                 <tr>
                     <td><label for="fName">First Name</label>&nbsp;
                         </td>
-                    <td><input type="text" name="fName" id="fName" required size="20" pattern="[a-z]{4,8}" title="4 to 8 lowercase letters"></td>
+                    <td><input type="text" name="fName" id="fName" required size="20" pattern="[A-z]" title="Must be characters from A-z">
+                        <span class="validity"></span>
+                    </td>
                     
                 </tr>
                 <tr>
                     <td><label for="lName">Last Name</label>&nbsp;</td>
-                    <td><input type="text" name="lName" id="lName"></td>
+                    <td><input type="text" name="lName" id="lName" required size="20" pattern="[A-z]" title="Must be characters from A-z">
+                        <span class="validity"></span>
+                    </td>
                 </tr>
                 <tr>
                     <td><label for="email">Email</label>&nbsp;</td>
                     <td> <input type="email" name="email" id="email"></td>
                 </tr>
+
+                <tr>
+                        <td><label for="password">Password</label>&nbsp;</td>
+                    <td>    
+                        <input type="password" name="passowrd" id="password" required size="20" pattern="[a-z][1-9]{6-10}" title="Must be 6-10 characters which contains numbers from 1-9 and lowercase letters a-z">
+                    </td>
+                </tr>
+
                 <tr>
                         <td><label >Country</label>&nbsp;</td>
                     <td><select name="country" id="">
