Bottom border is added on every page

--- a/index.html
+++ b/index.html
@@ -39,36 +39,36 @@
                  <p class="descript">I am Selamawit Elias, since I started working with java it has become my favorite language. I frequently practice it inorder to be an expert.</p> 
             </div>
                                
+    <div class="head"><h3>Hobbies and Interest</h3>
+        <ul>
+            <li>I enjoy watching sports. My top three favorites are: <br>
+                <ul>
+                    <br>
+                    <li>Football</li><br>
+                    <li>VollyBall</li><br>
+                    <li>Tennis</li><br>
+                </ul>
+            </li>             
+            <li>Reading Books<br>
+                <ul>
+                    <br>
+                    <!-- li*3 shortcut for producing 3 -->
+                    <li>I mostly like to read fiction books </li><br>
+                        <li>Two of my all time favorite books are : <br>
+                            <ul>
+                                    <br>
+                                <li>Harry Potter by J.K.Rowling</li><br>
+                                <li>Inheritance by Christopher Paolini</li><br>
+                            </ul>
+                         </li>
+                    </li>  
+                </ul>
+            </li>
+        </div>
     
-    <h3>Hobbies and Interest</h3>
-<ul>
-    <li>I enjoy watching sports. My top three favorites are: <br>
-        <ul>
-            <br>
-            <li>Football</li><br>
-            <li>VollyBall</li><br>
-            <li>Tennis</li><br>
-        </ul>
-    </li>             
-    <li>Reading Books<br>
-        <ul>
-            <br>
-            <!-- li*3 shortcut for producing 3 -->
-            <li>I mostly like to read fiction books </li><br>
-                <li>Two of my all time favorite books are : <br>
-                    <ul>
-                            <br>
-                        <li>Harry Potter by J.K.Rowling</li><br>
-                        <li>Inheritance by Christopher Paolini</li><br>
-                    </ul>
-                 </li>
-            </li>  
-        </ul>
-    </li>
-<hr>
 <!-- Top skills table -->
 
-<hr>   
+  
 
     <h3>Work Experience</h3>
     <div >
@@ -96,14 +96,15 @@
         ⭐️⭐️⭐️⭐️⭐️</div>
        <br>
  
-<hr>
-    <a href="http://www.facebook.com" target="blank">Facebook</a> | <a href="http://www.instagram.com" target="blank">Instagram</a>
-<hr>
 
-<hr>
-<p align="center">Developed by Selamawit Elias &copy;2020</p>
+       <div class="social"> <a href="http://www.facebook.com" target="blank">Facebook</a> | <a href="http://www.instagram.com" target="blank">Instagram</a></div>
+   
 
-<hr>
+
+<div><p align="center">Developed by Selamawit Elias &copy;2020</p></div>
+
+
+
 
 </body>
 </html>
