The third question is done with another css file(style3.css)

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
                                             
                                         </li>
                                         <li>
-                                            <a href="contact.html">Contact<Contact/a>
+                                            <a href="contact.html">Contact</a>
                                             
                                         </li>
                                         <li>
