--- a/#2.html
+++ b/#2.html
@@ -8,7 +8,7 @@
 </head>
 <body id="first">
 
-    <header>
+    <!-- <header>
         <nav>
             <ul>
                 <li>
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     
     
         <div class="third">
