The sixth question is done

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
 
         <div class="profile">
-            <img src="./asset/image/rounded.jpg" alt="Selamawit Elias profile image" id="prof">
+            <img src="./asset/image/rounded.png" alt="Selamawit Elias profile image" id="prof">
                     
              <h1 class="descript">Selamawit Elias</h1>
              <h3 class="descript">Student, Addis Ababa Institute of Technology</h3>
